Enhance contact and index pages with Font Awesome icons and update styles for better readability

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 /* Reset Styles */
 * {
   margin: 0;
@@ -7,7 +10,7 @@
 
 /* Body Styles */
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Noto Sans", sans-serif;
   background-color: #202020;
   color: #ffffff;
   font-size: 2vw;
@@ -16,10 +19,12 @@ body {
 
 /* Paragraph Styles */
 p {
+    font-family: "Inter", sans-serif;
   font-size: 1.3vw;
   color: #ffffff;
   font-weight: 400;
   line-height: 1.5em;
+  
 }
 
 /* Heading Styles */
@@ -445,4 +450,8 @@ h3 {
   border-radius: 0.5vw;
   object-fit: cover;
   object-position: right;
+}
+
+/* Responsive Styles */
+@media (min-width: 0px) and (max-width: 768px) {
 }
